--- a/.classpath
+++ b/.classpath
@@ -6,10 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/abdulelah/Documents/GitHub/SecurityGUI/src/application/jfoenix-9.0.1.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="lib/jfoenix-9.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
